--- a/backend/Dockerfile-backend
+++ b/backend/Dockerfile-backend
@@ -22,6 +22,9 @@ RUN curl -sS https://getcomposer.org/installer \
     | php -- --install-dir=/usr/local/bin --filename=composer \
     && chmod +x /usr/local/bin/composer
 
+# Exécutez Composer pour installer les dépendances
+RUN composer install
+
 # Oh My Zsh + alias artisan
 RUN sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 RUN echo 'alias artisan="php artisan"' >> ~/.zshrc
