--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,16 +8,18 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest --dom"
   },
   "main": "index.js",
   "dependencies": {
+    "@vitejs/plugin-vue": "^4.3.4",
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
     "datatables.net-dt": "^1.13.6",
     "datatables.net-responsive": "^2.5.0",
     "datatables.net-responsive-dt": "^2.5.0",
     "datatables.net-vue3": "^2.1.3",
+    "happy-dom": "^6.0.4",
     "pinia": "^2.1.6",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
@@ -29,8 +31,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.1",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vitest": "^0.34.5"
   },
   "eslintConfig": {
     "root": true,
