--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "datatables.net-vue3": "^2.1.3",
     "happy-dom": "^6.0.4",
     "pinia": "^2.1.6",
+    "sanitize-html": "^2.11.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
     "vue-spinner": "^1.0.4"
