--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.6",
     "vue": "^3.2.13",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.2.4",
     "vue-spinner": "^1.0.4"
   },
