--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,12 +31,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@faker-js/faker": "^8.1.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "nock": "^13.3.4",
     "vitest": "^0.34.5"
   },
   "eslintConfig": {
